--- a/src/pages/ideas/Donut.mdx
+++ b/src/pages/ideas/Donut.mdx
@@ -1,6 +1,6 @@
 ---
 layout: ../../layouts/MarkdownseshLayout.astro
-title: Kevin
+title: Donut
 author: Astro Learner
 description: "I had some challenges, but asking in the community really helped!"
 image:
@@ -9,12 +9,3 @@ image:
 pubDate: 2022-07-15
 tags: ["astro", "learning in public", "setbacks", "community"]
 ---
-import { Image } from 'astro:assets';
-import _Kevin from './assets/_Kevin.png';
-import _Kevins_stats from './assets/_Kevins_stats.png';
-
-#### Kevin the Drone
-
-{/*![KevinModel#1](Images/_Kevin.png)`*/}
-<Image src={_Kevins_stats} alt="Kevin's stats" />
-<Image src={_Kevin} alt="Kevin the Drone" height="300" width="300" />
