--- a/src/pages/projects/sesh-1.mdx
+++ b/src/pages/projects/sesh-1.mdx
@@ -1,13 +1,13 @@
 ---
 layout: ../../layouts/MarkdownseshLayout.astro
-title: Sesh-4
+title: Donuts
 author: Astro Learner
 description: "After learning some Astro, I couldn't stop!"
 image:
     url: "https://docs.astro.build/assets/arc.webp"
     alt: "The Astro logo on a dark background with a purple gradient arc."
-pubDate: 2025-02-24
+pubDate: 2022-07-08
 tags: ["astro", "blogging", "learning in public", "successes"]
 ---
 
-At the end of the session we were on the train to Selabar which is close to Mt Selabar.
+Nothing to see here yet. Check back later!
