Finished part10 and fixed wallpaper.

--- a/src/pages/projects/donuts.mdx
+++ b/src/pages/projects/donuts.mdx
@@ -25,3 +25,18 @@ This is what my donuts look like so far:
 ## Part 9: Layout
 The lighting is definitely off. The next video is about lighting.
 Getting the front donut to sit properly on the table was a bit finicky.
+
+## Part 10: Lighting
+Finished the lighting and set the website index page `background-size` to cover which
+just makes the image change its size to properly fit the tab screen size.
+Having issues with making the donut lighting match the videos. The reytracing helped a
+bit, but the lighting is still off. I will have to play around with the lighting settings
+or just move on.
+
+## Part 11: Compositing
+
+TODO: 
+Downloadable .blend files:
+
+{/*[Part10](./blenderFiles/Part10Lighting.blender)*/}
+<a href="./blenderFiles/Part10Lighting.blender" download>Click to Download</a>
