--- a/src/pages/projects/donuts.mdx
+++ b/src/pages/projects/donuts.mdx
@@ -13,7 +13,7 @@ import { Image } from 'astro:assets';
 import Wallpaper from './assets/Wallpaper.png';
 
 # Blender Guru's Donut Tutorial
-I started this documentation of my Blener journey late in the game.
+I started this documentation of my Blender journey late in the game.
 I dont really recall the very beginning, and I will start off at
 Part9: Layout of the Blender Guru's Donut tutorial Because thats where I am at.
 I will be using this page to document my progress and share my thoughts
@@ -34,7 +34,7 @@ bit, but the lighting is still off. I will have to play around with the lighting
 or just move on.
 
 ## Part 11: Compositing
-
+I think iI'm done working on the donut tutorial. I will be moving on to the next project.
 TODO: 
 Downloadable .blend files:
 
