Started on the boots.

--- a/src/pages/projects/PerfectMe.mdx
+++ b/src/pages/projects/PerfectMe.mdx
@@ -20,3 +20,11 @@ I started this project by looking at some references on Pintrest. I found a few 
 I will be using them as a reference for my model. I will be using the Half-Life combine soldier as a base
 for my model. More accuratelyl, I will be using the armor from the Youtube video "Patient Zero"
 by **TheParryGod**.
+#### Boots:
+Right now I am working on the boots. I have been looking on Pintrest and DeviantArt for some
+references. I have found a few images that I think might be useful.
+ I have also been actually working on the boots. Getting the correct perportions hasb't been easy.
+ {/*
+ TODO:
+ Add download link for blender.
+ */}
