--- a/src/pages/projects/PerfectMe.mdx
+++ b/src/pages/projects/PerfectMe.mdx
@@ -24,6 +24,14 @@ by **TheParryGod**.
 Right now I am working on the boots. I have been looking on Pintrest and DeviantArt for some
 references. I have found a few images that I think might be useful.
  I have also been actually working on the boots. Getting the correct perportions hasb't been easy.
+ I have finished working on the boots for now, I do intend on working on it some more later.
+#### Arm Armor:
+ I moved on to removing the arm armor which took quite a long time.
+#### Neck Armor:
+Well I did start on it and had tried making it from a plane and then solidifying it but I couln't figure out
+how to get the right shape. I ended up trying a cylinder and a phere and failed both.
+I am now going to take a break from trying to build The Pergect Me and try some other tutorials to see if I can
+learn some more tricks to help me solve my problems.
  {/*
  TODO:
  Add download link for blender.
