--- a/src/pages/projects/donuts.mdx
+++ b/src/pages/projects/donuts.mdx
@@ -10,7 +10,7 @@ pubDate: 2025-03-10
 tags: ["astro", "blogging", "learning in public", "Blender", "3D", "donuts"]
 ---
 import { Image } from 'astro:assets';
-import Wallpaper from './assets/Wallpaper.png';
+import Wallpaper from './assets/_Wallpaper.png';
 
 # Blender Guru's Donut Tutorial
 I started this documentation of my Blender journey late in the game.
