--- a/src/pages/projects/PerfectMe.mdx
+++ b/src/pages/projects/PerfectMe.mdx
@@ -10,7 +10,9 @@ pubDate: 2025-03-10
 tags: ["astro", "blogging", "learning in public", "Blender", "3D", "Half-Life"]
 ---
 import { Image } from 'astro:assets';
-//import Wallpaper from './assets/Wallpaper.png';
+import Boots from './assets/_BootsFinishedForNow.png';
+import ArmArmorR from './assets/_ArmArmorRemoved.png';
+import NeckArmor from './assets/_NeckArmorStart.png';
 
 # The Perfect Me
 My goal with this project is to create a 3D model of a Half-Life combine soldier armored
@@ -25,13 +27,16 @@ Right now I am working on the boots. I have been looking on Pintrest and Deviant
 references. I have found a few images that I think might be useful.
  I have also been actually working on the boots. Getting the correct perportions hasb't been easy.
  I have finished working on the boots for now, I do intend on working on it some more later.
+<Image src={Boots} alt="Boots" width={500} height={300} />
 #### Arm Armor:
  I moved on to removing the arm armor which took quite a long time.
+<Image src={ArmArmorR} alt="Boots" width={500} height={300} />
 #### Neck Armor:
 Well I did start on it and had tried making it from a plane and then solidifying it but I couln't figure out
 how to get the right shape. I ended up trying a cylinder and a phere and failed both.
 I am now going to take a break from trying to build The Pergect Me and try some other tutorials to see if I can
 learn some more tricks to help me solve my problems.
+<Image src={NeckArmor} alt="Boots" width={500} height={300} />
  {/*
  TODO:
  Add download link for blender.
