Back at PerfectMe, added TheParryGodRef.

--- a/src/pages/projects/PerfectMe.mdx
+++ b/src/pages/projects/PerfectMe.mdx
@@ -13,10 +13,14 @@ import { Image } from 'astro:assets';
 import Boots from './assets/_BootsFinishedForNow.png';
 import ArmArmorR from './assets/_ArmArmorRemoved.png';
 import NeckArmor from './assets/_NeckArmorStart.png';
+import NeckK from './assets/_NeckK.png';
+import TheParryGod from './assets/_TheParryGodRef.jpeg';
 
 # The Perfect Me
 My goal with this project is to create a 3D model of a Half-Life combine soldier armored
 version of the Perfect_Me.
+#### TheParryGod reference:
+<Image src={TheParryGod} alt="Boots" width={500} height={300} />
 #### Pintrest:
 I started this project by looking at some references on Pintrest. I found a few images that I liked and
 I will be using them as a reference for my model. I will be using the Half-Life combine soldier as a base
@@ -37,6 +41,10 @@ how to get the right shape. I ended up trying a cylinder and a phere and failed 
 I am now going to take a break from trying to build The Pergect Me and try some other tutorials to see if I can
 learn some more tricks to help me solve my problems.
 <Image src={NeckArmor} alt="Boots" width={500} height={300} />
+I ended up not taking a break and instead I started working on the neck armor. I think I will keep trying to 
+use a cylinder. I have probably restarted the neck armor over a dozen times now.
+I think I will just try to build something I like that is similar to TheParryGod's design.
+<Image src={NeckK} alt="Boots" width={500} height={300} />
  {/*
  TODO:
  Add download link for blender.
