Forgot to commit yesterday. Added quite a bit.

--- a/src/pages/projects/PerfectMe.mdx
+++ b/src/pages/projects/PerfectMe.mdx
@@ -15,6 +15,9 @@ import ArmArmorR from './assets/_ArmArmorRemoved.png';
 import NeckArmor from './assets/_NeckArmorStart.png';
 import NeckK from './assets/_NeckK.png';
 import TheParryGod from './assets/_TheParryGodRef.jpeg';
+import Adam from './assets/_Adam.png';
+import BodyRig from './assets/_BodyRigging.png';
+import BodyRigF from './assets/_BodyRiggingF.png';
 
 # The Perfect Me
 My goal with this project is to create a 3D model of a Half-Life combine soldier armored
@@ -45,6 +48,15 @@ I ended up not taking a break and instead I started working on the neck armor. I
 use a cylinder. I have probably restarted the neck armor over a dozen times now.
 I think I will just try to build something I like that is similar to TheParryGod's design.
 <Image src={NeckK} alt="Boots" width={500} height={300} />
+#### Atom:
+I have desided to create my own body and Its called Atom. I have fixed the legs, butt, fingers, back and wrists.
+<Image src={Adam} alt="Adam" width={500} height={300} />
+#### Body Rigging:
+I am using Blenders prebuilt rigging bone structure. I deleted the face rigging. I had to delete the all the rigging bellow to knee
+because the bones were to big for the body.
+<Image src={BodyRig} alt="Adam" width={500} height={300} />
+Here is the finished rigging:
+<Image src={BodyRigF} alt="Adam" width={500} height={300} />
  {/*
  TODO:
  Add download link for blender.
