Finally got the Mesh From Valve to rig.

--- a/src/pages/projects/PerfectMe.mdx
+++ b/src/pages/projects/PerfectMe.mdx
@@ -18,6 +18,7 @@ import TheParryGod from './assets/_TheParryGodRef.jpeg';
 import Adam from './assets/_Adam.png';
 import BodyRig from './assets/_BodyRigging.png';
 import BodyRigF from './assets/_BodyRiggingF.png';
+import FinallyRigged from './assets/_FinallyRigged.png';
 
 # The Perfect Me
 My goal with this project is to create a 3D model of a Half-Life combine soldier armored
@@ -57,6 +58,9 @@ because the bones were to big for the body.
 <Image src={BodyRig} alt="Adam" width={500} height={300} />
 Here is the finished rigging:
 <Image src={BodyRigF} alt="Adam" width={500} height={300} />
+I FINALLY!!!!! got the Valve Meshes to rig. I just had to parent them seperately and to the bones not the body.
+I also had to delete the bone groups.
+<Image src={FinallyRigged} alt="Adam" width={500} height={300} />
  {/*
  TODO:
  Add download link for blender.
