Added Wallhammer Ref and Fixed stuff.

--- a/src/pages/projects/PerfectMe.mdx
+++ b/src/pages/projects/PerfectMe.mdx
@@ -19,6 +19,7 @@ import Adam from './assets/_Adam.png';
 import BodyRig from './assets/_BodyRigging.png';
 import BodyRigF from './assets/_BodyRiggingF.png';
 import FinallyRigged from './assets/_FinallyRigged.png';
+import WallHammerRef from './assets/_WallHammerRef.png';
 
 # The Perfect Me
 My goal with this project is to create a 3D model of a Half-Life combine soldier armored
@@ -61,6 +62,10 @@ Here is the finished rigging:
 I FINALLY!!!!! got the Valve Meshes to rig. I just had to parent them seperately and to the bones not the body.
 I also had to delete the bone groups.
 <Image src={FinallyRigged} alt="Adam" width={500} height={300} />
+I have been working on getting the arm armor to look correctly and I Got sidetracked with the Adam(body) mesh 
+because it just doesn't look right. I ended up doing that a few times because I had fucked up on something and didn't save After
+fixing a few issues like the dupped body plate mesh and the arm armor.
+<Image src={WallHammerRef} alt="Adam" width={500} height={300} />
  {/*
  TODO:
  Add download link for blender.
