--- a/src/pages/projects/PerfectMe.mdx
+++ b/src/pages/projects/PerfectMe.mdx
@@ -66,6 +66,11 @@ I have been working on getting the arm armor to look correctly and I Got sidetra
 because it just doesn't look right. I ended up doing that a few times because I had fucked up on something and didn't save After
 fixing a few issues like the dupped body plate mesh and the arm armor.
 <Image src={WallHammerRef} alt="Adam" width={500} height={300} />
+#### Plates:
+I seperated the plates on the body. Fixed the shape of them.
+#### Shirt:
+Not sure if I will keep this shirt. I haven't finished settinf it up. I am thinking 
+that I should be making some sort of one piece suit to go underneath the armor.
  {/*
  TODO:
  Add download link for blender.
