--- a/src/pages/projects/PerfectMe.mdx
+++ b/src/pages/projects/PerfectMe.mdx
@@ -20,6 +20,7 @@ import BodyRig from './assets/_BodyRigging.png';
 import BodyRigF from './assets/_BodyRiggingF.png';
 import FinallyRigged from './assets/_FinallyRigged.png';
 import WallHammerRef from './assets/_WallHammerRef.png';
+import End from './assets/_End.png';
 
 # The Perfect Me
 My goal with this project is to create a 3D model of a Half-Life combine soldier armored
@@ -71,6 +72,12 @@ I seperated the plates on the body. Fixed the shape of them.
 #### Shirt:
 Not sure if I will keep this shirt. I haven't finished settinf it up. I am thinking 
 that I should be making some sort of one piece suit to go underneath the armor.
+#### Stuck:
+I have finished the Mesh but the rigging isn't working. I could sort of get some of the things working but then something else
+would break. Right now I am just going to work on getting the mesh cleaner and make it a propper low poly model.
+I would like to eventually make a high poly version of the model. I don't think I will be trying again at getting the rigging working for a while.
+<Image src={End} alt="End" width={500} height={300} />
+
  {/*
  TODO:
  Add download link for blender.
